resources/styles.scss
* {
    box-sizing: border-box;
}
img {
    border: 0;
}
body, html {
    background: #f0f9f0;
    color: #111;
    padding: 0;
    margin: 0;
}
div > div {
    padding: 0.5em;
}
form {
    padding: 1em;
    display: grid;
    grid-template-columns: 1fr 3fr;
}
h1, h2, h3, h4, h5 {
    text-align: center;
    margin: 0;
    padding: 0.5em;
}
ul, li {
    display: block;
    padding:0;
    margin: 0;
}
ul ul {
    display:none;
    > li {
        padding: 0.23em;
        text-align: center;
        border: 1px solid #ccc;
        border-radius: 0.25em;
        box-shadow: 3px 3px 5px #ccc;
        margin: 0.25em;
    }
}
label {
    text-align: right;
    padding-right: 1em;
}
li.active ul {
    display: grid;
    grid-template-columns: 1fr 1fr;
}
#body a {
    color: darkblue;
    background: rgba(0,0,0,0.1);
    border-radius: 0.1em;
}
input, textarea {
    background-color: #f0f0f0;
}
.bar {
    padding: 0 10%;
    background-color: darkgreen;
    color: #fff;
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0)), linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.25));
}
footer {
    text-align: center;
}
.me {
    border-radius: 1.25em;
    width: 12.5%;
    min-width: 200px;
    padding: 1.25%;
    float: left;
}
li h3 {
    cursor: pointer;
    background-color: rgba(0,125,0,0.025);
    border-radius: 2em;
}
p {
    margin: 0;
    padding: 0.25em;
}
nav a {
    color: #fff;
    background: rgba(255,255,255,0.25);
    border-radius: 0.25em;
    padding: 0.25em;
    display: inline-block;
    text-decoration: none;
    &.active {
        background-color: rgba(0,0,0,0.25);
        padding-left: 1.75em;
        background-image: url("icon.png");
        background-repeat: no-repeat;
        background-size: auto 100%;
    }
    &:hover {
        background: rgba(0,0,0,0.25);
    }
    &.active:hover {
        background: rgba(0,0,0,0.5);
    }
}
nav > ul {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    text-align: center;
    padding: 0.25em 0;
}
input, button, select, textarea {
    border-radius: 0.2em;
    padding: 0.2em;
}
#body {
    max-width: 1024px;
    min-width: 360px;
    width: 80%;
    margin: 1em auto 3em;
    background: #eee;
    box-shadow: 3px 3px 5px #ccc;
    padding: 2em 1em;
    > ul > li {
        border: 1px solid #ddd;
        border-radius: 2em;
    }
    > ul > li > h3:hover {
        color: darkblue;
    }
    > ul > li.active > h3 {
        color: darkblue;
    }
    > ul > li.active {
        border: none;
        padding-bottom: 0.5em;
    }
}
footer.bar {
    position: fixed;
    bottom: 0;
    width: 100%;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
}
#header {
    display: flex;
    background-color: #f0f9f0;
    color: #111;
    img {
        width: 106px;
        height: 64px;
        &.small {
            width: 64px;
            padding: 16px;
            border-radius: 24px;
        }
    }
    a {
        padding: 1em;
    }
    strong {
        font-size: 125%;
        padding: 1.5em;
    }
}
footer a,
footer a:hover,
footer a:active,
footer a:visited,
footer a:focus {
    color: #fff;
}
.small:last-of-type {
    margin-left: -68px;
    margin-bottom: -4px;
}
@media screen and (max-width: 1100px) {
    nav > ul {
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    }
    nav > ul > li {
        margin: 0.2em 0;
    }
}
@media screen and (max-width:700px) {
    div > div {
        padding: 0.25em 0.5em;
    }
    .bar {
        padding: 0 7.5%;
    }
}
@media screen and (max-width:500px) {
    div > div {
        padding: 0 0.5em;
    }
    .bar {
        padding: 0 5%;
    }
    li.active ul {
        grid-template-columns: 1fr;
    }
    footer.bar {
        position: static;
    }
    nav > ul {
        grid-template-columns: 1fr;
    }
    nav li {
        margin: 0.75em;
    }
    nav a {
        width: 100%;
    }
    form {
        grid-template-columns: 1fr;
    }
}
@media screen and (max-width:400px) {
    .bar {
        padding: 0;
    }
    .me {
        float: none;
    }
}
@media print {
    li ul {
        display: grid;
    }
}

